@@ -22,52 +22,74 @@ public class BreakpointManager {
     }
 
     public void setBreakpoint(String className, int lineNumber) throws AbsentInformationException {
-        String key = className + ":" + lineNumber;
-        if (setBreakpoints.contains(key)) return;
-
         for (ReferenceType targetClass : vm.allClasses()) {
             if (targetClass.name().equals(className)) {
-                List<Location> locations = targetClass.locationsOfLine(lineNumber);
-                if (!locations.isEmpty()) {
-                    BreakpointRequest bpReq = vm.eventRequestManager().createBreakpointRequest(locations.getFirst());
-                    bpReq.enable();
-                    breakpoints.add(bpReq);
-                    setBreakpoints.add(key);
-                    saveBreakpointToFile(className, lineNumber);
-                    System.out.println("Breakpoint set at " + className + ":" + lineNumber);
-                }
-                return;
+                Location location = targetClass.locationsOfLine(lineNumber).get(0);
+                BreakpointRequest bpReq = vm.eventRequestManager().createBreakpointRequest(location);
+                bpReq.enable();
+                breakpoints.add(bpReq);
             }
         }
+    }
 
-        // Si la classe n'est pas encore chargée, on ajoute un ClassPrepareRequest
-        ClassPrepareRequest classPrepareRequest = vm.eventRequestManager().createClassPrepareRequest();
-        classPrepareRequest.addClassFilter(className);
-        classPrepareRequest.enable();
+    public void listBreakpoints() {
+        for (BreakpointRequest bpReq : breakpoints) {
+            Location location = bpReq.location();
+            System.out.println("Breakpoint at " + location.declaringType().name() + ":" + location.lineNumber());
+        }
     }
 
     private void saveBreakpointToFile(String className, int lineNumber) {
-        try (FileWriter writer = new FileWriter(BREAKPOINTS_FILE, true)) {
-            writer.write(className + ":" + lineNumber + "\n");
+        String breakpoint = className + ":" + lineNumber;
+        try (BufferedReader reader = new BufferedReader(new FileReader("breakpoints.txt"))) {
+            String line;
+            while ((line = reader.readLine()) != null) {
+                if (line.trim().equals(breakpoint)) {
+                    return;
+                }
+            }
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+
+        try (FileWriter writer = new FileWriter("breakpoints.txt", true)) {
+            writer.write(breakpoint + "\n");
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
 
-    public void loadBreakpointsFromFile() {
-        File file = new File(BREAKPOINTS_FILE);
-        if (!file.exists()) return;
+
+    void loadBreakpointsFromFile() {
+        File file = new File("breakpoints.txt");
+        if (!file.exists()) {
+            System.out.println("No breakpoints file found.");
+            return;
+        }
 
         try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
             String line;
             while ((line = reader.readLine()) != null) {
                 String[] parts = line.split(":");
-                if (parts.length == 2) {
-                    setBreakpoint(parts[0], Integer.parseInt(parts[1]));
+                if (parts.length != 2) {
+                    System.out.println("Invalid breakpoint format: " + line);
+                    continue;
                 }
+                String className = parts[0];
+                int lineNumber;
+                try {
+                    lineNumber = Integer.parseInt(parts[1]);
+                } catch (NumberFormatException e) {
+                    System.out.println("Invalid line number: " + parts[1]);
+                    continue;
+                }
+                setBreakpoint(className, lineNumber);
             }
-        } catch (IOException | AbsentInformationException e) {
+        } catch (IOException e) {
             e.printStackTrace();
+        } catch (AbsentInformationException e) {
+            throw new RuntimeException(e);
         }
     }
+
 }
